--- a/main.html
+++ b/main.html
@@ -59,8 +59,10 @@
 				</ul>
 			</div>
 			<div class="description">
-				
-			</div>
+                <h3>BENEFITS</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis et finibus massa. Fusce pharetra, lorem nec facilisis ultricies, quam ligula congue est, sit amet tincidunt nulla odio et leo.</p>
+            </div>
+            <button class="add-to-cart">ADD TO CART</button>
 		</div>
 	</section>
 </body>
